src/frontend/yaml/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-shop-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    tls:
#      httpsRedirect: true
#    hosts:
#    - "shop.medevelop.studio"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: shop.medevelop.studio-secret
    hosts:
    - shop.medevelop.studio
